get custom fonts and colours working for Groovy theme. Start html for hero in index.html

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Familjen+Grotesk:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Send+Flowers&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <title>How Much Yarn?</title>
   </head>
@@ -15,17 +19,12 @@
         <label for="light" class="visually-hidden">Light</label>
         <input type="radio" name="theme" id="light" checked />
 
-        <label for="pink" class="visually-hidden">Pink theme</label>
-        <input type="radio" id="pink" name="theme" />
-
-        <label for="blue" class="visually-hidden">Blue theme</label>
-        <input type="radio" id="blue" name="theme" />
-
-        <label for="dark" class="visually-hidden">Dark theme</label>
-        <input type="radio" id="dark" name="theme" />
+        <label for="groovy" class="visually-hidden">Groovy theme</label>
+        <input type="radio" id="groovy" name="theme" />
 
         <label for="elegant" class="visually-hidden">Elegant theme</label>
         <input type="radio" id="elegant" name="theme" />
+
       </fieldset>
     </form>
     <!-- ADD SKIP TO MAIN CONTENT! -->
