--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Familjen+Grotesk:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Send+Flowers&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css" />
     <title>Yarn Help!</title>
   </head>
@@ -14,18 +19,29 @@
         <label for="light" class="visually-hidden">Light</label>
         <input type="radio" name="theme" id="light" checked />
 
+        <label for="groovy" class="visually-hidden">Groovy theme</label>
+        <input type="radio" id="groovy" name="theme" />
+
         <label for="elegant" class="visually-hidden">Elegant theme</label>
         <input type="radio" id="elegant" name="theme" />
 
       </fieldset>
     </form>
+    <section class="hero">
+      <div class="hero-inner">
+          <h1>Yarn Help!</h1>
+          <h2 class="tagline">Help with Yarn Math for Knitters, Crocheters, and the Wonderful People Who Gift Us Yarn.</h2>
+          <a href="https://example.com/" class="btn">Go ahead...</a>
+      </div>
+  </section>
 
     <div class="hero">Hero with image and site title is going here</div>
   </header>
 <body>
+  
     <main>
       <div class="wrapper">
-        <h1>Yarn Help!</h1>
+        <h1>YARN HELP!</h1>
         <h2>3.0 Version - Is Being Built in Public</h2>
         <p>This updated design and "DRYer" Javascript code is being built in public. Every day that I work on it, the updates will be deployed live. Note that I tend to use really bright colours like red and green for css testing purposes. That currently includes the links for this site. Take a look at the code here: <a href="https://github.com/GingerKiwi/yarnhelp3">GitHub repo for Yarn Help 3.0</a></p>
         <p>For the 2.0 version which has caluculations for worsted 04 weight (thickness) yarn for sweaters, scarfs, and blankets for both knit and crochet please visit <a href="https://yarnhelp2.netlify.app">https://yarnhelp2.netlify.app</a> </p>
