got header image and fonts working

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Familjen+Grotesk:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Send+Flowers&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Familjen+Grotesk:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Send+Flowers&family=Ubuntu+Mono:ital@0;1&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css" />
     <title>Yarn Help!</title>
@@ -28,14 +28,20 @@
       </fieldset>
     </form>
     <section class="hero">
-      <div class="hero-inner">
+      <div class="hero--inner">
+        <div class="hero--inner-title">
           <h1>Yarn Help!</h1>
-          <h2 class="tagline">Help with Yarn Math for Knitters, Crocheters, and the Wonderful People Who Gift Us Yarn.</h2>
+          
+        </div>  
+        <h2 class="tagline">Help with Yarn Math for Knitters, Crocheters, <br> and the Wonderful People Who Gift Us Yarn.</h2>
           <a href="https://example.com/" class="btn">Go ahead...</a>
+          <blockquote>
+            <p>“Knitting is, at its fundamentals, a binary code featuring top-down design, standardized submodules, and recursive logic that relies on ratios, mathematical principles, and an intuitive grasp of three-dimensional geometry.”
+              <br>
+              ~ Kim Salazar on Knit List</p>
+          </blockquote>
       </div>
-  </section>
-
-    <div class="hero">Hero with image and site title is going here</div>
+    </section>
   </header>
 <body>
   
