--- a/index.html
+++ b/index.html
@@ -35,6 +35,30 @@
 
       </fieldset>
     </form>
+    <nav>
+      <img
+      src="assets/menu.svg"
+      class="menu"
+      id="menu-btn"
+      alt="open menu"
+    />
+      <ul class="nav" id="nav">
+          <li class="exit" id="/assets/exit-btn">
+            <img
+            src="assets/exit.svg"
+            class="menu"
+            id="exit-btn"
+            alt="close menu"
+          />
+          </li>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="howmuchyarn.html">How Much Yarn?</a></li>
+        <li><a href="doctorwho.html">Doctor Who Scarf</a></li>
+        <li><a href="crafting-and-code.html">Crafting and Code Coffee Chats and Discord </a>
+        <li><a href="about.html">About and Contact</a></li>
+        <li><a href="index01.html">Old Site Version 1.0</a></li>
+      </ul>
+    </nav>
     <!-- nav here -->
     <section class="hero">
       
@@ -152,5 +176,6 @@
       </div>
     </main>
     <script src="/app.js"></script>
+    <script src="/nav.js"></script>
   </body>
 </html>
