--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
         <label for="starwars-dark" class="visually-hidden">Starwars Dark Theme</label>
         <input type="radio" name="theme" id="starwars-dark" />
 
-        <!-- <label for="light" class="visually-hidden">Light</label>
-        <input type="radio" name="theme" id="light" /> -->
-
         <label for="elegant" class="visually-hidden">Elegant Theme</label>
         <input type="radio" id="elegant" name="theme" />
 
@@ -49,17 +46,16 @@
             class="menu"
             id="exit-btn"
             alt="close menu"
-          />
+            />
           </li>
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="howmuchyarn.html">How Much Yarn?</a></li>
         <li><a href="doctorwho.html">Doctor Who Scarf</a></li>
-        <li><a href="crafting-and-code.html">Crafting and Code Coffee Chats and Discord </a>
+        <li><a href="craftingandcode.html">Crafting and Code Coffee Chats and Discord </a>
         <li><a href="about.html">About and Contact</a></li>
-        <li><a href="index01.html">Old Site Version 1.0</a></li>
+        <!-- <li><a href="index01.html">Old Site Version 1.0</a></li> -->
       </ul>
     </nav>
-    <!-- nav here -->
     <section class="hero">
       
       <div class="hero--inner">
