got drwho working. updated content and layout to match ver 3.0

--- a/doctorwho.html
+++ b/doctorwho.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,500;1,400;1,500&family=Audiowide&family=Chicle&family=Familjen+Grotesk:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter&family=Playfair+Display:wght@400;500&family=Send+Flowers&family=Share+Tech+Mono&family=Ubuntu+Mono:ital@0;1&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css" />
-    <title>How Much Yarn?</title>
+    <title>Doctor Who Scarf</title>
   </head>
 
     <!-- A11Y - ADD SKIP TO MAIN CONTENT! -->
@@ -60,46 +60,47 @@
     
   
     <main>
-      <div class="wrapper card--content width--max-85vw margin--1rem">
+    <div class="wrapper"></div>
+      <section class="card--content width--max-85vw margin--1rem">
         <h1 class="clr--heading align--center">Doctor Who Scarf</h1>
           
-    <!-- <img src="/Assets/512px-Dr_Who_WikiMedia-316350537.jpg" alt="Tardis blue police box from Doctor Who appearing to move through space. The stylized photo is a purplish blue."> -->
-    <p class="text-center text-bold">Welcome to the Doctor Who Scarf number of balls calculator and pattern generator!</p>
-    <p class="text-center">Note: This site is currently only optimized for mobile devices.</p>
-  </section>
-      <section class="grid-span-2-col">
-          <h2>Instructions</h2>
-          <p>Please enter the number of yards in each ball of the yarn you would like to use. <span class="emphasis"> The yarn must be Craft Yarn Council's "04" weight (thickness)! </span>Other names for this are: worsted, medium, and 10ply. If you use wraps per inch (great for mystery yarn in your stash that's lost its label!) it should be 9wpi.</p>
-      </section>
+            <p class="text-center text-bold">Welcome to the Doctor Who Scarf number of balls calculator and pattern generator!</p>
+            <p class="text-center">Currently (July, 2023), this is version 2.0 added to this Yarn Help! version 3 site. Future plans include calculating how many balls of each colour you will need. This will also be the testing ground for a knitting pattern generator.</p>
+        </section>
+        <section class="card--content width--max-85vw margin--1rem">
+            <h2>Instructions</h2>
+            <p>Please enter the number of yards in each ball of the yarn you would like to use. <span class="emphasis"> The yarn must be Craft Yarn Council's "04" weight (thickness)! </span>Other names for this are: worsted, medium, and 10ply. If you use wraps per inch (great for mystery yarn in your stash that's lost its label!) it should be 9wpi.</p>
+        </section>
 
-      <section class="input-yards grid-span-2-col">
-          <label for="input"
-        >Yards in Each Ball:
-        <input type="number" placeholder="100" id="yards-per-ball" min="10" max="45000"
-      /></label>
+        <section class="card--content width--max-85vw margin--1rem">
+            <label for="input"
+            >Yards in Each Ball:
+            <input type="number" placeholder="100" id="yards-per-ball" min="10" max="45000"
+        /></label>
 
-      <button type="submit" id="btn-calculate" class="btn-calculate btn">
-        Calculate
-      </button>
+        <button type="submit" id="btn-calculate" class="btn-calculate btn">
+            Calculate
+        </button>
+            </div>
         </div>
-      </div>
-  </section>
-  <section class="wrapper card--content width--max-85vw margin--1rem">
-      <div class="size-answer">
-          <h3>How Many Balls to Make a Season 12 Doctor Who Scarf <br>10.5" x 12 feet (144")</h3>
-          <p>Note: Currently (March 27, 2023) the generator only gives the total number of balls. This page will be expanded to include how many balls of each colour you will need.</p>
-          <p id="answer-doctorwho-scarf-04" class="p-number-of-balls">knit doctor who scarf</p>
-          <p id="answer-doctorwho-crochet-scarf-04" class="p-number-of-balls">crochet doctor who scarf</p>
-        </div>
-  </section>
-  <section class="wrapper card--content width--max-85vw margin--1rem">
-    <div class="">
-      <h3>Doctor Who Scarf Pattern Generator</h3>
-      <p class="text-center text-bold">Comming Soon!</p>
-      <p>Once this section is completed you'll be able to put in the number of yards per ball of the worsted/medium weight yarn you want to use in the calculator above, and the page will generate how many balls of each colour you need as well as a simple pattern that advanced beginner knitters and crocheters can follow.</p>
-      <p>The first pattern generated is based on  <a href="https://www.ravelry.com/designers/chris-brimelow">Chris Brimlow's</a> Season 12 pattern on <a href="https://www.ravelry.com/patterns/library/doctor-who-scarf---season-12">Ravelry.com</a> and his <a href="http://www.doctorwhoscarf.com/">dedicated Doctor Who Scarf website</a> which he based on the BBC's pattern which is no longer avaliable. (Wow that's convoluted!) Eventually, I hope to add further pattern generators for Doctor Who scarf patterns from other seasons.</p>
-    </div>
-  </section>
+        </section>
+
+        <section class="card--content width--max-85vw margin--1rem">
+            <div class="size-answer">
+                <h3>How Many Balls to Make a Season 12 Doctor Who Scarf <br>10.5" x 12 feet (144")</h3>
+                <p>Note: Currently (March 27, 2023) the generator only gives the total number of balls. This page will be expanded to include how many balls of each colour you will need.</p>
+                <p id="answer-doctorwho-scarf-04" class="p-number-of-balls">knit doctor who scarf</p>
+                <p id="answer-doctorwho-crochet-scarf-04" class="p-number-of-balls">crochet doctor who scarf</p>
+                </div>
+        </section>
+        <section class="card--content width--max-85vw margin--1rem">
+            <div class="">
+            <h3>Doctor Who Scarf Pattern Generator</h3>
+            <p class="text-center text-bold">Comming Soon!</p>
+            <p>Once this section is completed you'll be able to put in the number of yards per ball of the worsted/medium weight yarn you want to use in the calculator above, and the page will generate how many balls of each colour you need as well as a simple pattern that advanced beginner knitters and crocheters can follow.</p>
+            <p>The first pattern generated is based on  <a href="https://www.ravelry.com/designers/chris-brimelow" target="_blank" rel=noopener>Chris Brimlow's</a> Season 12 pattern on <a href="https://www.ravelry.com/patterns/library/doctor-who-scarf---season-12" target="_blank" rel=noopener>Ravelry.com</a> and his <a href="http://www.doctorwhoscarf.com/" target="_blank" rel=noopener>dedicated Doctor Who Scarf website</a> which he based on the BBC's pattern which is no longer avaliable. (Wow that's convoluted!) Eventually, I hope to add further pattern generators for Doctor Who scarf patterns from other seasons.</p>
+            </div>
+        </section>
 </div>
 </div>
 
@@ -107,6 +108,7 @@
 </main>
 <script src="/app.js"></script>
 <script src="/nav.js"></script>
+<script src="/doctorwho.js"></script>
 </body>
 </html>
 
