update content and links on index.html

--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
             </p>
           </div>
           <div class="card">
-            <h3 class="card__title">Doctor Who Scarf</h3>
-            <p>
-              <a href="https://yarnhelp2.netlify.app/doctorwho.html" target="_blank">Link to Yarn Help 2.0 Doctor Who Scarf Page</a>
-            </p>
+            <h3 class="card__title">
+              <a href="/doctorwho.html">Doctor Who Scarf</a>
+            </h3>
+            <p>Calculates how many balls of yarn needed for a season 12 Doctor Who Scarf. Home of the future knitting pattern generator.</p>
+           
           </div>
           <div class="card">
-            <h3 class="card__title">About</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Repellendus, atque.
+            <h3 class="card__title">
+              <a href="/about.html">About and Contact</a>
+            </h3>
             </p>
           </div>
           <div class="card">
