tweak nav styling and index.html content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             alt="close menu"
             />
           </li>
-        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="howmuchyarn.html">How Much Yarn?</a></li>
         <li><a href="doctorwho.html">Doctor Who Scarf</a></li>
         <li><a href="craftingandcode.html">Crafting and Code Coffee Chats and Discord </a>
@@ -101,9 +101,10 @@
                         versions of some of the pages</li>
           </ul>    
         </p>
-        <p><a href="https://yarnhelp2.netlify.app/" target="_blank">Yarn Help 2.0</a></p>
+        <p><a href="https://yarnhelp2.netlify.app/" target="_blank" rel=noopener>Yarn Help 2.0</a></p>
       </div>
-        <h2>Pages</h2>
+      <div class="card--content margin--1rem "><h2>Pages</h2></div>
+        
         <div class="auto-grid">
           <div class="card">
             <h3 class="card__title">
@@ -159,16 +160,7 @@
 
           </div>
         </div>
-        <p>
-          Rerum, neque! Consequuntur obcaecati beatae dolorum, fuga itaque iusto
-          dicta et corporis facere ea necessitatibus odit cum, voluptates harum,
-          dolore maiores aliquid distinctio repellendus nesciunt!
-        </p>
-        <p>
-          Unde dolor quod delectus obcaecati labore laboriosam optio sit
-          eligendi. Excepturi explicabo quod obcaecati pariatur error, in,
-          accusantium eum omnis repellat qui, aliquid magnam odit?
-        </p>
+        
       </div>
     </main>
     <script src="/app.js"></script>
