--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             alt="close menu"
             />
           </li>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
         <li><a href="howmuchyarn.html">How Much Yarn?</a></li>
         <li><a href="doctorwho.html">Doctor Who Scarf</a></li>
         <li><a href="craftingandcode.html">Crafting and Code Coffee Chats and Discord </a>
