minor adjustments to layout in howmuchyarn.html

--- a/howmuchyarn.html
+++ b/howmuchyarn.html
@@ -60,7 +60,7 @@
     
   
     <main>
-      <div class="wrapper card--content width--max-85vw margin--1rem">
+      <div class="wrapper card--content width--max-85vw margin--sides-2rem">
         <h1 class="clr--heading align--center">How Much Yarn? <br> The Yarn Gift Helper</h1>
         <p>
           Are you a non-knitter or non-crocheter who would like to gift yarn to
