start work on text to binary to knitting converter

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="howmuchyarn.html">How Much Yarn?</a></li>
         <li><a href="doctorwho.html">Doctor Who Scarf</a></li>
+        <li><a href="text-binary-knit-converter.html">Text to Binary to Knitting Pattern</a></li>
         <li><a href="craftingandcode.html">Crafting and Code Coffee Chats and Discord </a>
         <li><a href="about.html">About and Contact</a></li>
         <!-- <li><a href="index01.html">Old Site Version 1.0</a></li> -->
