tweak css for secret message. add card text for secret message page to index.html

--- a/index.html
+++ b/index.html
@@ -134,9 +134,11 @@
           </div>
           <div class="card">
             <h3 class="card__title">
-              <a href="/about.html">About and Contact</a>
+              <a href="/text-binary-knit-converter.html">Binary Code Secrete Message Generator</a>
             </h3>
-            </p>
+          <p>Converts text to binary code then to a knitting pattern so you can have a
+            secret message in your knitting!
+          </p>
           </div>
           <div class="card">
             <h3 class="card__title">Contact</h3>
