add underdevelopment message and instructions to text-binary-knit-converter.html

--- a/text-binary-knit-converter.html
+++ b/text-binary-knit-converter.html
@@ -78,13 +78,12 @@
     <main>
         <div class="wrapper margin--bottom-1rem margin--top-2rem">
         <section class="card--content margin--bottom-1rem">
-        <h2>title</h2>
+        <h2>Binary Secret Message Knitting Pattern Creator</h2>
+        <h3>Note: This page is in development, so the app isn't working yet.</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-        aspernatur ducimus, distinctio in aperiam autem deleniti omnis repellat
-        veniam quae rerum nesciunt harum similique quo, nisi, fugit ea a
-        voluptatem!
+        Type your secret message in the text box below. Then tap or click on the "Create Pattern" button. Your message will be displayed below. 
       </p>
+      <p>Each letter or space is represented by 8 stitches. Make sure that your project is wide enough to fit the secret message. For example the words: "Hello World" have 11 characters (5 letters + 1 space + 5 letters), so your project needs to be at least 88 stitches wide (11 characters x 8 stitches per character).</p>
       </section>
 
       <section class="card--content margin--bottom-1rem">
